--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,21 +1,20 @@
-.App {
-  text-align: center;
-}
+/* .App {
+} */
 
 .App-header {
   background-color: #282c34;
-  
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  padding: .4em 0;
-  font-weight:bold;
+  padding: 0.4em 0;
+  font-weight: bold;
 }
 
-.App-Body{
+.App-Body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -23,41 +22,62 @@
 }
 
 .App-Card {
-  display:flex;
-  flex-direction: column;
+  display: flex;
   width: 80%;
+  padding: 1rem 0;
   margin: 0 auto;
-  align-items:center; 
   border: 1px solid #333;
   background-color: #fff;
   border-radius: 16px;
-  margin-top:2em;
-  min-height:50vh;
-  max-height:500px;
-
-  
+  margin-top: 2em;
+  min-height: 50vh;
+  max-height: 500px;
 }
 
-.App-Card p{
-  margin: 0 auto;
-}
-
-
-.App-Footer{
-  display:flex;
-  width: 100%;
-  background-color:#333;
+.App-Footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
   color: #fff;
-  padding: 1em 0;
+  padding: 1em 10%;
   margin-top: auto;
 }
 
-
 .App-Link {
-  text-align:center;
+  all: unset;
+  text-align: center;
   font-weight: bold;
+  cursor: pointer;
   color: #61dafb;
-  margin: 0 auto;
+  margin: 0;
 }
 
+.Jobs-Section {
+  width: 100%;
+  padding: 0 2rem;
+}
 
+.Jobs-Header {
+  margin: 0;
+}
+
+.Job-Detail-Section {
+  width: 100%;
+  padding: 0 2rem;
+}
+
+hr {
+  margin: 0.25rem 0;
+}
+
+.Job-Title {
+  margin-top: 0.25rem;
+}
+
+.Job-Detail-Section img {
+  margin: 1rem 0;
+  width: 100%;
+  object-fit: cover;
+  height: 16rem;
+}
