--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -90,3 +90,10 @@ hr {
   object-fit: cover;
   height: 16rem;
 }
+
+.Loading-View {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
